Update title and add LR favicon

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LustRooms — AI Companion Experiences</title>
+    <title>Lustrooms — Your Fantasy. Perfected.</title>
     <meta name="description" content="Intimate, always-available AI companions in live webcam experiences crafted entirely for you." />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
