--- a/frontend/public/privacy.html
+++ b/frontend/public/privacy.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Privacy Policy — lustrooms</title>
+  <title>Privacy Policy — Lustrooms</title>
   <meta name="robots" content="noindex" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -135,27 +135,37 @@
 
   <main>
     <h1 class="page-title">Privacy Policy</h1>
-    <p class="last-updated">Last updated: January 2026</p>
+    <p class="last-updated">Last updated: February 2026</p>
 
     <div class="notice">
-      <strong>Important:</strong> lustrooms is an adult platform. By providing your email address and accessing this platform, you confirm that you are at least 18 years of age. We take your privacy seriously and are committed to handling your personal information with discretion.
+      <strong>Important:</strong> Lustrooms is an adult platform. By providing your email address and accessing this platform, you confirm that you are at least 18 years of age. We take your privacy seriously and are committed to handling your personal information with full discretion and in compliance with applicable data protection laws, including the EU General Data Protection Regulation (GDPR) and the California Consumer Privacy Act (CCPA).
     </div>
 
-    <h2>1. Who We Are</h2>
-    <p>lustrooms ("we", "us", "our") operates the website located at lustrooms.com. We provide an adult entertainment platform featuring AI-generated virtual companions. <strong>No real persons are involved in, depicted, or represented by any content on our platform.</strong></p>
-    <p>For privacy-related inquiries, contact us at: <a href="mailto:privacy@lustrooms.com">privacy@lustrooms.com</a></p>
+    <h2>1. Who We Are / Data Controller</h2>
+    <p>Lustrooms ("we", "us", "our") operates the website located at lustrooms.com. We are the data controller responsible for your personal data. We provide an adult entertainment platform featuring exclusively AI-generated virtual companions. <strong>No real persons are involved in, depicted, or represented by any content on our platform.</strong></p>
+    <p>For all privacy-related inquiries, contact us at: <a href="mailto:team@lustrooms.com">team@lustrooms.com</a></p>
 
     <h2>2. Information We Collect</h2>
-    <p>We collect only the minimum information necessary to operate our service:</p>
+    <p>We collect only the minimum personal data necessary to operate our service:</p>
     <ul>
       <li><strong>Email address</strong> — collected when you join our early bird waitlist or create an account.</li>
       <li><strong>Usage data</strong> — anonymized analytics data including pages visited, session duration, and general geographic region (country/city level), collected via Google Analytics.</li>
-      <li><strong>Technical data</strong> — browser type, device type, and IP address (anonymized where required by law).</li>
+      <li><strong>Technical data</strong> — browser type, device type, operating system, and IP address (anonymized where required by applicable law).</li>
+      <li><strong>Cookie data</strong> — consent preferences and session identifiers. See Section 7 below.</li>
     </ul>
-    <p>We do not collect your name, payment details (handled by third-party processors), or any information that could identify you beyond what is necessary for service delivery.</p>
-    <p>We do not use session recordings, heatmaps, or any behavioral profiling tools that capture individual interactions.</p>
+    <p>We do not collect your full name, national identification numbers, payment card details (handled entirely by third-party processors), or any sensitive personal data as defined under Article 9 of the GDPR.</p>
+    <p>We do not use session recordings, heatmaps, or behavioral profiling tools that capture individual interactions.</p>
 
-    <h2>3. How We Use Your Information</h2>
+    <h2>3. Lawful Basis for Processing (GDPR)</h2>
+    <p>For users in the European Economic Area (EEA), we process your personal data on the following legal bases under Article 6 of the GDPR:</p>
+    <ul>
+      <li><strong>Consent (Art. 6(1)(a))</strong> — for sending marketing and launch notification emails. You may withdraw consent at any time by unsubscribing or emailing us.</li>
+      <li><strong>Contract performance (Art. 6(1)(b))</strong> — for processing data necessary to fulfill your subscription, including transactional emails and account management.</li>
+      <li><strong>Legitimate interests (Art. 6(1)(f))</strong> — for anonymized analytics to improve our service, fraud prevention, and platform security. We have conducted a balancing test and determined these interests are not overridden by your rights.</li>
+      <li><strong>Legal obligation (Art. 6(1)(c))</strong> — where we are required to process data to comply with applicable laws.</li>
+    </ul>
+
+    <h2>4. How We Use Your Information</h2>
     <p>Your email address is used solely for:</p>
     <ul>
       <li>Sending you launch notifications and early access information you requested;</li>
@@ -163,60 +173,86 @@
       <li>Sending transactional communications related to your account (receipts, security alerts);</li>
       <li>Sending occasional platform updates — never more than necessary.</li>
     </ul>
-    <p>We do not sell, rent, trade, or share your email address with any third party for marketing purposes.</p>
+    <p>We do not sell, rent, trade, or share your email address or any personal data with any third party for marketing purposes. Ever.</p>
 
-    <h2>4. Billing Discretion</h2>
-    <p>We understand that discretion matters. All charges will appear on your billing statement under a neutral, non-descriptive company name that does not reference "lustrooms" or adult content. Your banking institution will never see the nature of the service you subscribed to.</p>
+    <h2>5. Billing Discretion</h2>
+    <p>We understand that discretion is paramount. All charges will appear on your billing statement under a neutral, non-descriptive company name that does not reference "Lustrooms" or adult content. Your banking institution will not see the nature of the service you subscribed to.</p>
 
-    <h2>5. Third-Party Services</h2>
-    <p>We use the following third-party services which may process limited data:</p>
+    <h2>6. Third-Party Data Processors</h2>
+    <p>We engage the following third-party processors who may handle limited personal data on our behalf. All processors are bound by data processing agreements and are required to implement appropriate technical and organisational security measures:</p>
     <ul>
-      <li><strong>Google Analytics / Google Tag Manager</strong> — anonymized traffic analytics. IP addresses are anonymized. You may opt out via <a href="https://tools.google.com/dlpage/gaoptout" target="_blank" rel="noopener">Google's opt-out tool</a>.</li>
-      <li><strong>Payment processors</strong> — credit card and billing data is handled entirely by our PCI-DSS compliant payment processor. We never store your full card number.</li>
-      <li><strong>Email delivery providers</strong> — used to send transactional emails. They receive only your email address and are bound by strict data processing agreements.</li>
+      <li><strong>Google Analytics / Google Tag Manager</strong> — anonymized traffic analytics. IP addresses are anonymized prior to storage. You may opt out via <a href="https://tools.google.com/dlpage/gaoptout" target="_blank" rel="noopener noreferrer">Google's opt-out tool</a>. Google LLC is certified under the EU-US Data Privacy Framework.</li>
+      <li><strong>Mailchimp (Intuit Inc.)</strong> — email marketing and mailing list management. Receives only your email address. Mailchimp is certified under the EU-US Data Privacy Framework. Their privacy policy is available at <a href="https://www.intuit.com/privacy/statement/" target="_blank" rel="noopener noreferrer">intuit.com</a>.</li>
+      <li><strong>Payment processors</strong> — credit card and billing data is handled entirely by our PCI-DSS Level 1 compliant payment processor. We never store, transmit, or have access to your full card number, CVV, or billing address.</li>
+      <li><strong>Hosting provider (Hostinger)</strong> — website infrastructure and file hosting. Servers may be located in the EU or US.</li>
+      <li><strong>Cloudflare Inc.</strong> — CDN, DDoS protection, and DNS management. Cloudflare may process IP addresses as part of traffic routing. Cloudflare is certified under the EU-US Data Privacy Framework.</li>
     </ul>
 
-    <h2>6. Cookies</h2>
-    <p>We use essential cookies (required for the site to function) and analytics cookies (Google Analytics). We do not use advertising cookies, retargeting cookies, or cross-site tracking cookies.</p>
-    <p>You may disable cookies in your browser settings. Disabling analytics cookies will not affect your ability to use the platform.</p>
-
-    <h2>7. Data Retention</h2>
-    <p>We retain your email address for as long as you remain on our mailing list or hold an active account. If you unsubscribe or request deletion, we will permanently remove your email from our systems within 30 days.</p>
-    <p>Anonymized analytics data may be retained for up to 26 months for aggregate reporting.</p>
-
-    <h2>8. Your Rights</h2>
-    <p>Depending on your jurisdiction, you may have the following rights regarding your personal data:</p>
+    <h2>7. Cookies</h2>
+    <p>We use the following categories of cookies:</p>
     <ul>
-      <li><strong>Access</strong> — request a copy of the personal data we hold about you;</li>
-      <li><strong>Correction</strong> — request correction of inaccurate data;</li>
-      <li><strong>Deletion</strong> — request permanent deletion of your data ("right to be forgotten");</li>
-      <li><strong>Portability</strong> — receive your data in a structured, machine-readable format;</li>
-      <li><strong>Objection</strong> — object to processing of your data for direct marketing;</li>
-      <li><strong>Restriction</strong> — request restriction of processing in certain circumstances.</li>
+      <li><strong>Essential cookies</strong> — required for the site to function (e.g., consent preference storage). These cannot be disabled.</li>
+      <li><strong>Analytics cookies</strong> — Google Analytics, used only if you have accepted analytics cookies via our cookie banner.</li>
     </ul>
-    <p>To exercise any of these rights, email <a href="mailto:privacy@lustrooms.com">privacy@lustrooms.com</a>. We will respond within 30 days. California residents may additionally exercise their rights under the CCPA by the same process.</p>
+    <p>We do not use advertising cookies, retargeting cookies, cross-site tracking cookies, or social media tracking pixels.</p>
+    <p>You can withdraw your cookie consent at any time by clearing your browser's local storage or cookies and revisiting the site. You may also disable cookies entirely in your browser settings without affecting your ability to use the platform.</p>
 
-    <h2>9. Children's Privacy</h2>
-    <p>lustrooms is strictly an adult platform. We do not knowingly collect or process personal data from anyone under the age of 18. If we become aware that a minor has provided personal information, we will delete it immediately. If you believe a minor has accessed our platform, contact us immediately at <a href="mailto:privacy@lustrooms.com">privacy@lustrooms.com</a>.</p>
+    <h2>8. Data Retention</h2>
+    <p>We retain personal data only for as long as necessary for the purposes described in this policy:</p>
+    <ul>
+      <li><strong>Email address (mailing list)</strong> — retained until you unsubscribe or request deletion, after which it is permanently removed within 30 days.</li>
+      <li><strong>Email address (active subscription)</strong> — retained for the duration of your subscription plus 12 months for legal and tax record-keeping purposes.</li>
+      <li><strong>Anonymized analytics data</strong> — retained for up to 26 months for aggregate reporting, after which it is automatically deleted.</li>
+    </ul>
 
-    <h2>10. Data Security</h2>
-    <p>We implement industry-standard security measures including encrypted connections (HTTPS/TLS), hashed credentials, and access controls. No method of internet transmission is 100% secure; however, we take all commercially reasonable steps to protect your data.</p>
-    <p>We will notify affected users and relevant authorities within 72 hours of becoming aware of a data breach that may affect your rights and freedoms, as required by applicable law.</p>
+    <h2>9. Your Rights</h2>
+    <p>Depending on your jurisdiction, you have the following rights regarding your personal data. To exercise any right, email <a href="mailto:team@lustrooms.com">team@lustrooms.com</a>. We will respond within 30 days (or 45 days where permitted by law).</p>
+    <ul>
+      <li><strong>Right of access (Art. 15 GDPR)</strong> — request a copy of all personal data we hold about you;</li>
+      <li><strong>Right to rectification (Art. 16 GDPR)</strong> — request correction of inaccurate or incomplete data;</li>
+      <li><strong>Right to erasure / "Right to be forgotten" (Art. 17 GDPR)</strong> — request permanent deletion of your personal data;</li>
+      <li><strong>Right to data portability (Art. 20 GDPR)</strong> — receive your data in a structured, machine-readable format (JSON or CSV);</li>
+      <li><strong>Right to object (Art. 21 GDPR)</strong> — object to processing for direct marketing or on grounds of legitimate interests;</li>
+      <li><strong>Right to restriction (Art. 18 GDPR)</strong> — request restriction of processing in certain circumstances;</li>
+      <li><strong>Right to withdraw consent</strong> — withdraw any consent-based processing at any time without affecting prior processing.</li>
+    </ul>
+    <p><strong>EU/EEA residents:</strong> You have the right to lodge a complaint with your national data protection supervisory authority. A list of EU supervisory authorities is available at <a href="https://edpb.europa.eu/about-edpb/about-edpb/members_en" target="_blank" rel="noopener noreferrer">edpb.europa.eu</a>.</p>
+    <p><strong>California residents (CCPA/CPRA):</strong> You have the right to know what personal information we collect, the right to delete, the right to opt out of sale (we do not sell personal information), and the right to non-discrimination for exercising your rights. Submit requests to <a href="mailto:team@lustrooms.com">team@lustrooms.com</a>.</p>
 
-    <h2>11. International Transfers</h2>
-    <p>Our services may be hosted on servers located in the United States or European Union. If you are located in the EU/EEA, your data may be transferred to and processed in countries outside the EEA. Such transfers are made with appropriate safeguards, including Standard Contractual Clauses approved by the European Commission.</p>
+    <h2>10. Children's Privacy</h2>
+    <p>Lustrooms is strictly an adult platform intended for users 18 years of age and older. We do not knowingly collect, process, or store personal data from any person under the age of 18. If we become aware that a minor has provided personal information or accessed our platform, we will delete all associated data immediately and without notice. If you believe a minor has accessed our platform, notify us immediately at <a href="mailto:team@lustrooms.com">team@lustrooms.com</a>.</p>
 
-    <h2>12. Changes to This Policy</h2>
-    <p>We may update this Privacy Policy from time to time. When we do, we will update the "Last updated" date at the top of this page and, where the changes are significant, notify you by email.</p>
+    <h2>11. Data Security</h2>
+    <p>We implement industry-standard security measures to protect your personal data, including:</p>
+    <ul>
+      <li>Encrypted connections (HTTPS/TLS 1.2 and above) on all pages;</li>
+      <li>Hashed and salted credential storage — we never store passwords in plaintext;</li>
+      <li>Role-based access controls limiting internal access to personal data;</li>
+      <li>Regular security reviews and vulnerability assessments.</li>
+    </ul>
+    <p>In the event of a personal data breach that is likely to result in a risk to your rights and freedoms, we will notify the relevant supervisory authority within 72 hours and affected users without undue delay, as required by GDPR Article 33–34.</p>
 
-    <h2>13. Contact</h2>
-    <p>For any privacy-related questions, requests, or concerns:</p>
-    <p>Email: <a href="mailto:privacy@lustrooms.com">privacy@lustrooms.com</a></p>
+    <h2>12. International Data Transfers</h2>
+    <p>Our services may involve the transfer of personal data to countries outside the European Economic Area (EEA), including the United States. Where such transfers occur, we ensure appropriate safeguards are in place, including:</p>
+    <ul>
+      <li>EU Standard Contractual Clauses (SCCs) approved by the European Commission (Decision 2021/914);</li>
+      <li>Transfers to processors certified under the EU-US Data Privacy Framework where applicable.</li>
+    </ul>
+    <p>You may request a copy of the relevant transfer safeguards by contacting <a href="mailto:team@lustrooms.com">team@lustrooms.com</a>.</p>
+
+    <h2>13. Changes to This Policy</h2>
+    <p>We may update this Privacy Policy periodically to reflect changes in our practices, technology, legal requirements, or other factors. When we make material changes, we will update the "Last updated" date at the top of this page and, where required or where changes significantly affect your rights, notify you by email with reasonable advance notice.</p>
+    <p>Continued use of the platform after the effective date of any updated Privacy Policy constitutes your acceptance of the revised policy.</p>
+
+    <h2>14. Contact</h2>
+    <p>For any privacy-related questions, data subject requests, or concerns:</p>
+    <p><strong>Email:</strong> <a href="mailto:team@lustrooms.com">team@lustrooms.com</a></p>
+    <p>We are committed to resolving privacy complaints promptly. If you are not satisfied with our response, you have the right to escalate your complaint to your local data protection authority.</p>
   </main>
 
   <footer>
-    © <script>document.write(new Date().getFullYear())</script> lustrooms. All rights reserved.
-    &nbsp;·&nbsp; <a href="/" style="opacity:0.6;">Back to lustrooms</a>
+    © <script>document.write(new Date().getFullYear())</script> Lustrooms. All rights reserved.
+    &nbsp;·&nbsp; <a href="/" style="opacity:0.6;">Back to Lustrooms</a>
   </footer>
 
 </body>
